layout bugfixes

--- a/src/common/static/common/style.css
+++ b/src/common/static/common/style.css
@@ -7,9 +7,11 @@ a:hover {
 html,
 body {
   height: 100%;
+  min-height: 100%;
   background-color: #333;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 body {
